--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Jigsaw (0.0.1)</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div id="jigsaw_container"></div>
@@ -12,7 +13,10 @@
 		<script>
 			(function(){
 				'use strict';
-				var puzzle = new Jigsaw('#jigsaw_container');
+				var puzzle = Jigsaw.init({
+					'container': '#jigsaw_container',
+					'divisions': 3
+				});
 			})();
 		</script>
 	</body>
