Restart game implemented

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Jigsaw (0.1.0)</title>
+		<title>Jigsaw (0.1.1)</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div id="jigsaw_wrap"></div>
+		<div class="tools_bar">
+			<button class="btn_cmn" type="button" id="btn_restart">Restart</button>
+		</div>
 		<script src="js/jquery-1.9.0.min.js"></script>
 		<script src="js/hammer.js"></script>
 		<script src="js/jigsaw-puzzle.js"></script>
