Basic score keeping added

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Jigsaw (0.1.1)</title>
+		<title>Jigsaw (0.1.2)</title>
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div id="jigsaw_wrap"></div>
 		<div class="tools_bar">
+			<div class="result_box"></div>
 			<button class="btn_cmn" type="button" id="btn_restart">Restart</button>
 		</div>
 		<script src="js/jquery-1.9.0.min.js"></script>
