Images used in puzzle grids

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Jigsaw (0.1.2)</title>
+		<meta name="viewport" content="initial-scale=1,width=device-width" />
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	<img src="img/jigsaw.jpg" alt="Jigsaw Image" id="puzzle_map" style="display:none;">
 		<div id="jigsaw_wrap"></div>
 		<div class="tools_bar">
 			<div class="result_box"></div>
@@ -13,6 +15,7 @@
 		</div>
 		<script src="js/jquery-1.9.0.min.js"></script>
 		<script src="js/hammer.js"></script>
+		<script src="js/split-image.js"></script>
 		<script src="js/jigsaw-puzzle.js"></script>
 		<script>
 			(function(){
