Image puzzle grid

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Jigsaw (0.1.2)</title>
+		<title>Jigsaw (v0.2.0)</title>
 		<meta name="viewport" content="initial-scale=1,width=device-width" />
 		<link rel="stylesheet" href="css/style.css">
 	</head>
